--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <div class="container">
+        <div class="header">
+            <h1>Tic-tac-toe</h1>
+            <div class="game-info">
+                <div class="player-wrapper">
+                    <label for="player-X">Player X</label>
+                    <input type="text" id="player-X" name="player-X">
+                </div>
+                <div class="game-buttons">
+                    <button type="button" class="start">Start</button>
+                    <button type="button" class="restart" disabled>Restart</button>
+                </div>
+                <div class="player-wrapper">
+                    <label for="player-O">Player O</label>
+                    <input type="text" id="player-O" name="player-O">
+                </div>
+            </div>
+        </div>
         <div class="board"></div>
     </div>
 </body>
